arm64: hima: Activate new camera drivers
Change-Id: Iae28e9dbaad510c35bb2b887b2d860ccd95255e1

--- a/arch/arm64/configs/lineageos_hima_defconfig
+++ b/arch/arm64/configs/lineageos_hima_defconfig
@@ -2405,11 +2405,14 @@ CONFIG_HI256=y
 CONFIG_MT9M114=y
 # CONFIG_OV5645 is not set
 CONFIG_T4KA7=y
+CONFIG_OV16880=y
 CONFIG_IMX220=y
 CONFIG_VD6869=y
 CONFIG_OV2722=y
 CONFIG_OV13850_FRONT=y
 CONFIG_OV4688_FRONT=y
+CONFIG_OIS_CALIBRATION=y
+CONFIG_OV8858_FRONT=y
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
 # CONFIG_OV8825 is not set
